Se agregan cambios SemiFinales

--- a/Enfoque 360/index.html
+++ b/Enfoque 360/index.html
@@ -31,10 +31,12 @@
         <div class="ParteDosHeader">
             <div class="containerNoticias">
                 <ul>
-                    <a href="" class="anclasMenu">Inicio</a>
+                    <a href="index.html" class="anclasMenu">Inicio</a>
                     <a href="entretenimiento.html" class="anclasMenu">Entretenimiento</a>
                     <a href="editorial.html" class="anclasMenu">Editorial</a>
                     <a href="opinion.html" class="anclasMenu">Opinion</a>
+                    <a href="entrevistas.html" class="anclasMenu">Entrevistas</a>
+                    <a href="quienesSomos.html" class="anclasMenu">Nosotros</a>
                 </ul>
             </div>
         </div>
@@ -166,14 +168,14 @@
                 <!-- NOTICIA 8 -->
                 <a href="noticiaOcho.html" class="cartas"><div class="CardNoticias" >
                     <div class="containerImgNoticia">
-                        <img src="img/Ciclistas.jpeg" alt="" class="primerNoticia">
+                        <img src="img/deportes2.jpeg" alt="" class="primerNoticia">
                     </div>
                     <div class="categoriaNoticia">
-                        Entretenimiento
+                        Deportes 
                     </div>
     
                     <p class="IntroNoticia">
-                        Alcaldía de Armenia e indeportes Quindio realizan ciclovías y aeróbicos cada domingo para el entretenimiento de toda la comunidad cuyabra   
+                        Kamikazes al ring   
                     </p>
                 </div>
                 </a>
