--- a/Enfoque 360/opinion.html
+++ b/Enfoque 360/opinion.html
@@ -34,7 +34,9 @@
                     <a href="index.html" class="anclasMenu">Inicio</a>
                     <a href="entretenimiento.html" class="anclasMenu">Entretenimiento</a>
                     <a href="editorial.html" class="anclasMenu">Editorial</a>
-                    <a href="" class="anclasMenu">Opinion</a>
+                    <a href="opinion.html" class="anclasMenu">Opinion</a>
+                    <a href="entrevistas.html" class="anclasMenu">Entrevistas</a>
+                    <a href="quienesSomos.html" class="anclasMenu">Nosotros</a>
                 </ul>
             </div>
         </div>
@@ -46,8 +48,10 @@
             <div class="tituliNoticia">
                 <h1>
                     Opinion
-                </h1>
-                <hr>
+                </h1> 
+            <h4>
+                Autor: David Lopez 
+            </h4>
             </div>
             <div class="textEditorial">
                 <p class="textoEditorial">
