--- a/Enfoque 360/entretenimiento.html
+++ b/Enfoque 360/entretenimiento.html
@@ -32,6 +32,8 @@
                     <a href="entretenimiento.html" class="anclasMenu">Entretenimiento</a>
                     <a href="editorial.html" class="anclasMenu">Editorial</a>
                     <a href="opinion.html" class="anclasMenu">Opinion</a>
+                    <a href="entrevistas.html" class="anclasMenu">Entrevistas</a>
+                    <a href="quienesSomos.html" class="anclasMenu">Nosotros</a>
                 </ul>
             </div>
         </div>
