--- a/Enfoque 360/noticiaSeis.html
+++ b/Enfoque 360/noticiaSeis.html
@@ -35,6 +35,8 @@
                     <a href="entretenimiento.html" class="anclasMenu">Entretenimiento</a>
                     <a href="editorial.html" class="anclasMenu">Editorial</a>
                     <a href="opinion.html" class="anclasMenu">Opinion</a>
+                    <a href="entrevistas.html" class="anclasMenu">Entrevistas</a>
+                    <a href="quienesSomos.html" class="anclasMenu">Nosotros</a>
                 </ul>
             </div>
         </div>
@@ -64,7 +66,7 @@
              </div >
             <hr>
             <h4>
-                Autor: Cristian Grisales
+                Autor: Cristian Miranda
             </h4>
             <div class="containerImgNoticia">
                 <img src="img/politica1.jpeg" alt="" class="primerNoticia">
