Parte final Enfoque 365

--- a/Enfoque 360/entrevistas.html
+++ b/Enfoque 360/entrevistas.html
@@ -74,6 +74,11 @@
             <h1>Lina María León</h1>
             <p>Directora del programa de Comunicación Social Peridismo </p>
         </div></a>
+
+        <a href="entrevista6.html" class="AnclasEntrevistas"><div class="containerEntrevistas">
+            <h1>Larissa Tatiana Rico Buitrago</h1>
+            <p>Jefe de la oficina curricular de la vicerrectoría académica UQ</p>
+        </div></a>
     </main>
     
     <footer class="finalEntrevista">
