--- a/Enfoque 360/quienesSomos.html
+++ b/Enfoque 360/quienesSomos.html
@@ -52,7 +52,7 @@
                 <hr>
             </div><br>
             <p>
-                Somos un blog periodistico que busca darle una nueva imagen a la noticias del dia a dia, creando tambien un ambiente interactivo entre la opinion publica y la ciudadania y asi poder tener un mayor acercamiento con ellos para generar un nuevo ambiente noticioso y dejar atras los diversos medios tradicionales que no han tenido una debida adaptacion a la nueva era (4.0) y que no brindan un nuevo interes en los consumidores 
+                Somos un blog periodistico que busca darle una nueva imagen a la noticias del dia a dia, creando tambien un ambiente interactivo entre la opinion publica y la ciudadania y asi poder tener un mayor acercamiento con ellos para generar un nuevo ambiente noticioso y dejar atras los diversos medios tradicionales que no han tenido una debida adaptacion a la nueva era (4.0) y que no brindan un nuevo interes en los consumidores.
             </p>
             <div class="imgPerson">
                 <div class="carInfoPerson">
@@ -64,7 +64,7 @@
                 <div class="carInfoPerson">
                     <img src="img/Mariana Giraldo.jpeg" alt="" class="imgFinal">
                     <h1 class="namePerson">Mariana Giraldo</h1>
-                    <p>Gefe Editorial</p>
+                    <p>Jefe Editorial</p>
                 </div>
 
                 <div class="carInfoPerson">
@@ -88,7 +88,7 @@
                 <div class="carInfoPerson">
                     <img src="img/Cristian Grisales.png" alt="" class="imgFinal">
                     <h1 class="namePerson">Cristian Grisales</h1>
-                    <p>Editor</p>
+                    <p>Editor Técnico</p>
                 </div>
 
                 <div class="carInfoPerson">
